--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ body {
   margin: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
